# biotech-process-analytics-portfolio

./: .gitignore  README.md  cpv_dashboard.html  investigation_LOT-0035.html  references.md  validation_memo.html
project-1-cpv-command-center/: README.md  pyproject.toml
project-1-cpv-command-center/configs/: kpi_definitions.yml
project-1-cpv-command-center/notebooks/: demo.ipynb
project-1-cpv-command-center/src/analytics/: cpv_rules.py
project-1-cpv-command-center/src/dashboard/: export_dashboard_tables.py
project-1-cpv-command-center/src/etl/: load_and_standardize.py
project-1-cpv-command-center/src/metrics/: compute_kpis.py
project-1-cpv-command-center/src/reports/: generate_monthly_cpv_pack.py
project-1-cpv-command-center/src/sql/: create_star_schema.sql
project-1-cpv-command-center/tests/: test_cpv.py
project-2-oot-investigation/: README.md  pyproject.toml
project-2-oot-investigation/configs/: spec_limits.yml
project-2-oot-investigation/notebooks/: demo.ipynb
project-2-oot-investigation/src/analytics/: detect_oot_events.py  peer_batch_compare.py
project-2-oot-investigation/src/app/: case_review_dashboard.py
project-2-oot-investigation/src/features/: build_feature_store.py
project-2-oot-investigation/src/models/: rank_contributors.py
project-2-oot-investigation/src/reports/: generate_investigation_report.py
project-2-oot-investigation/tests/: test_workbench.py
project-3-golden-batch/: README.md  pyproject.toml
project-3-golden-batch/configs/: design_space.yml
project-3-golden-batch/notebooks/: demo.ipynb
project-3-golden-batch/src/dashboard/: batch_monitor_app.py
project-3-golden-batch/src/features/: align_and_extract_features.py
project-3-golden-batch/tests/: test_golden_batch.py
(+5 files in other folders)
