[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cpv-command-center"
version = "0.1.0"
description = "Cell Therapy CPV & KPI Command Center for multi-site manufacturing review"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "scipy>=1.10",
    "statsmodels>=0.14",
    "plotly>=5.15",
    "jinja2>=3.1",
    "pyyaml>=6.0",
    "openpyxl>=3.1",
]

[project.optional-dependencies]
dev = ["pytest>=7.4"]
