[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "oot-investigation-workbench"
version = "0.1.0"
description = "OOT investigation workbench for batch release drift using public pharmaceutical manufacturing data"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "scipy>=1.10",
    "statsmodels>=0.14",
    "scikit-learn>=1.3",
    "plotly>=5.15",
    "jinja2>=3.1",
    "pyyaml>=6.0",
    "openpyxl>=3.1",
]

[project.optional-dependencies]
dev = ["pytest>=7.4", "nbformat>=5.9", "nbconvert>=7.0"]
